Fix logo alignment issue

--- a/src/style/style.less
+++ b/src/style/style.less
@@ -91,7 +91,6 @@ ol.breadcrumb {
 
 }
 
-
 .navbar-default {
   margin-bottom: 0px !important;
 }
@@ -113,12 +112,10 @@ p.lead {
 }
 
 .logo {
-  .image-container {
-    padding: 0px 15px;
+  padding: 100px 15px 0px 15px;
 
-    img {
-      margin: 100px auto 0 auto;
-    }
+  img {
+    margin: 0px auto;
   }
 }
 
